--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -104,9 +104,21 @@ body {
     text-align: center;
 }
 
+@media (max-width: 992px) {
+    .group-img .txt-section {
+        width: 70%;
+    }
+}
+
 .txt-section h1 {
     font-size: 50px;
     font-family: "Varela Round", sans-serif !important;
+}
+
+@media (max-width: 992px) {
+    .txt-section h1 {
+        font-size: 25px !important;
+    }
 }
 
 .txt-section .play-now {
